2005-06-21  Charles Levert  <charles_levert@gna.org>

	* src/grep.c (nlscan): Make this function more robust by removing
	  the undocumented assumption that its "lim" argument points
	  right after a line boundary.  This will be used later to fix
	  --byte-offset's broken behavior.  Patch #3769.

	* src/grep.c (main): Add a test to check if -o/--only-matching
	  and context lines are both specified and if so, set both context
	  specifications (before and after) to zero then print an explicit
	  warning to stderr explaining what was done and why (as opposed
	  to drastically aborting the process in error).  Patch #3768.
	  Other code needs this zero setting to work correctly without
	  having to repeatedly test for this conflictual condition.

	* tests/foad1.sh: Add tests combining -o, -n/-b/-H, and -i,
	  since there are separate code paths for -i.  Add tests combining
	  -o, -n/-b/-H, and -3, since any context line specification
	  should be ignored when combined with -o.
	* src/grep.c (print_line_head): New function, culled off the
	  top content of prline().  Adds a guard against "lastnl" having
	  already reached "lim", which can happen when if the function
	  is called more than once per line.
	* src/grep.c (prline): Now calls print_line_head(), not only at
	  the beginning to replace the moved code when -o is not
	  specified, but also for each match when -o is specified (two
	  code paths with this).  Patch #3770, more or less.  This makes
	  all tests combining -o and -n/-b/-H pass, which they didn't
	  before.  Fixes bug #12727.

	* src/grep.c (SEP_CHAR_MATCH, SEP_CHAR_CONTEXT, SEP_STR_CHUNK):
	  New macros for ':', '-', and "--".  Used throughout the file.
	  Will be used even more in upcoming updates, so good to have now.

	* src/grep.c: The new GREP_COLORS (plural) framework, only
	  partially used at this point to make for a simpler initial
	  patch in CVS.  A subset of patch #3644 on Savannah.